# BLASTed

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  build_example.sh  common_build.sh  config_debug_petsc.sh  config_release_petsc.sh
doc/: blasted-main.dox  blasted_doxygen.cfg  blasted_refs.bib  user-doc.md
include/: arrayview.hpp  async_initialization_decl.hpp  blasted_config.hpp  blasted_petsc.h  blasted_petsc_ext.hpp  blockmatrices.hpp  coomatrix.hpp  device_container.hpp  ilu_pattern.hpp  iterative_preconditioner.hpp  levelschedule.hpp  linearoperator.hpp  preconditioner_diagnostics.h  preconditioner_diagnostics.hpp  relaxation_async.hpp  relaxation_async_sgs.hpp  relaxation_chaotic.hpp  relaxation_jacobi.hpp  reoderingscaling.hpp  reorderingscaling.hpp  scmatrixdefs.hpp  solverfactory.hpp  solverops_base.hpp  solverops_ilu0.hpp  solverops_jacobi.hpp  solverops_levels_ilu0.hpp  solverops_levels_sgs.hpp  solverops_sai.hpp  solverops_sgs.hpp  solverops_sgs_sai.hpp  solvertypes.h  srmatrixdefs.hpp
include/bsr/: blockmatrices.hpp  scmatrixdefs.hpp  solverfactory.hpp  solverops_base.hpp  solverops_ilu0.hpp  solverops_jacobi.hpp  solverops_levels_sgs.hpp  solverops_sgs.hpp  srmatrixdefs.hpp
include/utils/: blasted_petsc_io.h  cmdoptions.hpp  mpiutils.hpp  prefix_sum.hpp
scripts/: plotasyncconv.py
src/: CMakeLists.txt  adjacency.cpp  adjacency.hpp  async_blockilu_factor.cpp  async_blockilu_factor.hpp  async_ilu_factor.cpp  async_ilu_factor.hpp  blas1.cpp  blas1.hpp  blasted_petsc.cpp  blasted_petsc.h  blasted_petsc_io.cpp  blasted_petsc_io.h  blockmatrices.cpp  blockmatrices.hpp  blockmatrices.ipp  bsrmatrix.cpp  coomatrix.cpp  coomatrix.hpp  coomatrix.ipp  csrmatrix.cpp  dlu.cpp  dlu.hpp  dynamic_array_list.hpp  error_handling.hpp  helper_algorithms.cpp  helper_algorithms.hpp  ilu_pattern.cpp  ilu_pattern.hpp  impldefs.hpp  iter_blockilu_apply.cpp  iter_blockilu_apply.hpp  iter_scalarilu_apply.cpp  iter_scalarilu_apply.hpp  iterative_preconditioner.cpp  levelschedule.cpp  linearoperator.hpp  matrix_properties.cpp  matrix_properties.hpp  matvec_kernels.cpp  (+25 more)
src/blas/: CMakeLists.txt  blas1.cpp  blas1.hpp  matmat.cpp  matmat.hpp  matvecs.hpp
src/bsr/: CMakeLists.txt  async_blockilu_factor.cpp  async_blockilu_factor.hpp  async_ilu_factor.cpp  async_ilu_factor.hpp  blockmatrices.ipp  bsrmatrix.cpp  csrmatrix.cpp  ilu_pattern.cpp  levelschedule.cpp  matvecs.hpp  rawsrmatrixutils.cpp  relaxation_chaotic.cpp  reorderingscaling.cpp  scmatrix.cpp  solverfactory.cpp  solverops_base.cpp  solverops_ilu0.cpp  solverops_jacobi.cpp  solverops_levels_ilu0.cpp  solverops_levels_sgs.cpp  solverops_sgs.cpp
src/bsr/kernels/: kernels_ilu_apply.hpp  kernels_sgs.hpp
src/kernels/: kernels_base.hpp  kernels_ilu0.hpp  kernels_ilu0_factorize.hpp  kernels_ilu_apply.hpp  kernels_relaxation.hpp  kernels_sgs.hpp  preckernels.hpp
src/utils/: CMakeLists.txt  blasted_petsc_io.cpp  cmdoptions.cpp  convert_to_mtx.cpp  petsc_cmdoptions.cpp  petsc_cmdoptions.hpp  prefix_sum.cpp  util_petsc_io.c
tests/: CMakeLists.txt  bsrmatmul.cpp  bsrmatrix.cpp  coomatrix.cpp  csrmatrix.cpp  runbsrmatrixtest.cpp  runcoomatrixtest.cpp  runcsrmatrixtest.cpp  runpetscsingle.c  runpetscsolver.c  runpetsctest.c  runpetsctest.cpp  runsolvetest.cpp  runthreadedpetsctest.c  solve.cpp  solvers.cpp  solvers.hpp  testbsrmatrix.cpp  testbsrmatrix.hpp  testcoomatrix.cpp  testcoomatrix.hpp  testcsrmatrix.cpp  testcsrmatrix.hpp  testpetscsolver.cpp  testpetscsolver.h  testpetscsolver.hpp  testreorderedsolve.cpp  testsolve.cpp  testsolve.hpp  testunstructuredsaipattern.cpp  testutils.c  testutils.cpp  testutils.h  testutils.hpp
tests/helper_algs/: CMakeLists.txt  testhelper.cpp
tests/helper_algs/input/: sorted_arrays.txt  unsorted_arrays.txt
tests/input/: 2dcyl1_ilu0.perc  2dcyl1_ilu0_mkl.perc  2dcyl1_jacobi.perc  2dcyl1_relaxation_jacobi.perc  2dcyl1_sgs.perc  2dcyl1_sgs_mkl.perc  asyncpreconditioning.perc  asyncrelaxation.perc  block4_relaxation_compare.perc  mpi_poisson_csr_sgs.perc  poisson-amg.control  poisson.control  poisson.petscrc  poisson_csr_amg.perc  poisson_csr_petsc.perc  poisson_csr_sgs.perc  small_block3_matrix_sorted.coo  small_coo_matrix.mtx  small_coo_matrix_sorted.coo
tests/input/boeing-msc00726/: msc00726.mtx  msc00726_b.mtx  msc00726_x.mtx
tests/input/cfd-matrix-test/: DK01R_b.mtx  DK01R_x.mtx
tests/input/fvens-2dcyl1/: 2dcyl1.pmat  2dcyl1.pmat.info  2dcyl1_b.mtx  2dcyl1_b.pmat  2dcyl1_x.mtx  2dcyl1_x.pmat  2dcyl1_x.pmat.info
tests/mat_ops/: CMakeLists.txt  bscconversiontest.cpp  runcoomatrixtest.cpp  scmatrixtest.cpp  testbsrmatrix.cpp  testbsrmatrix.hpp  testcoladj.cpp  testcoomatrix.cpp  testcsrmatrix.cpp  testcsrmatrix.hpp  testlevelschedule.cpp  testmc64.cpp  testreordering.cpp
tests/mat_ops/input/: small_block3_matrix.csc  small_block3_matrix.mtx  small_block3_matrix_b.mtx  small_block3_matrix_sorted_bcolmajor.bcoo  small_block3_matrix_view.txt  small_block3_matrix_x.mtx  small_coo_matrix_sorted.coo
tests/perftest/: CMakeLists.txt  perftest_options_example.perc  perftesting.cpp  perftesting.hpp  perftesting_petsc.cpp  perftesting_petsc.hpp  runperftest.cpp  runperftest_petsc.cpp
tests/petsctest/: CMakeLists.txt  cartmesh.cpp  cartmesh.hpp  poisson3d.cpp
tests/poisson3d-fd/: CMakeLists.txt  cartmesh.cpp  cartmesh.hpp  poisson3d-threaded.cpp  poisson3d.cpp  poisson3d_fd.cpp  poisson3d_fd.hpp  poisson_setup.cpp  poisson_setup.h  poisson_test.c  poisson_utils.hpp  testsai.cpp  testsai.hpp  testtriangularsai.cpp
tests/poisson3d-fd/input/: async_poisson.perc  mpi_poisson.perc  mpi_poisson_csr_ilu0.perc  mpi_poisson_csr_sgs.perc  mpi_poisson_localrelaxation.perc  poisson-large.control  poisson_csr_amg.perc  poisson_csr_ilu0.perc  poisson_csr_sgs.perc  small_poisson.control  thread_poisson_csr.perc
tests/solverops/: CMakeLists.txt  async_ilu_convergence.cpp  async_ilu_convergence.hpp  async_triangular_factors_convergence.cpp  iter_prec_conv.hpp  test_iter_prec_conv.cpp
tests/utils/: CMakeLists.txt  test_prefix_sum.cpp
